1、重命名cirstack.h为cirlist.h（循环链表） 2、文件头都加上#pragma once，避免同一个头文件被包含（include）多次，导致重复编译 3、主要修改了 hhl_string 文件中DynamicString(顺序存储-动态分配-字符串)类

--- a/data_structure1.vcxproj.filters
+++ b/data_structure1.vcxproj.filters
@@ -47,7 +47,7 @@
     <ClInclude Include="hhl_string.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="cirstack.h">
+    <ClInclude Include="cirlist.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="chlist.h">
