--- a/data_structure1.vcxproj
+++ b/data_structure1.vcxproj
@@ -153,7 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chlist.h" />
-    <ClInclude Include="cirstack.h" />
+    <ClInclude Include="cirlist.h" />
     <ClInclude Include="genlist.h" />
     <ClInclude Include="hhl_string.h" />
     <ClInclude Include="sqqueue.h" />
