--- a/data_structure1.vcxproj
+++ b/data_structure1.vcxproj
@@ -161,6 +161,8 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="1.txt" />
+    <Text Include="2.txt" />
+    <Text Include="Editor_helper.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
