--- a/data_structure1.vcxproj.filters
+++ b/data_structure1.vcxproj.filters
@@ -67,5 +67,11 @@
     <Text Include="1.txt">
       <Filter>资源文件</Filter>
     </Text>
+    <Text Include="Editor_helper.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="2.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
 </Project>
