修改MonsterLanguage： 1、修改存储初始魔王语言的容器类型为SqQueue 2、简化answer1 3、修改answer2，实现从内向外的括号嵌套翻译 4、从外向内的括号嵌套翻译尚未实现，answer3有待优化

--- a/data_structure1.vcxproj
+++ b/data_structure1.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Editor.cpp" />
     <ClCompile Include="HuffManCoding.cpp" />
     <ClCompile Include="Mazz.cpp" />
+    <ClCompile Include="MazzDFS.cpp" />
     <ClCompile Include="MonsterLanguage.cpp" />
     <ClCompile Include="PolyFunction.cpp" />
     <ClCompile Include="SetOperation.cpp" />
