--- a/data_structure1.vcxproj.filters
+++ b/data_structure1.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="HuffManCoding.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="MazzDFS.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hhl_string.h">
